Add mentor anchor to community CFP page

--- a/home/templates/home/community_cfp.html
+++ b/home/templates/home/community_cfp.html
@@ -52,7 +52,7 @@ Call for Outreachy community coordinators, mentors, and volunteers
 
 <p>All work done by Outreachy interns should be public and done out in the open on public channels connected with the community.</p>
 
-<p>Outreachy intern projects will need to meet <a href="/mentor/mentor-faq/#define-a-project">additional Outreachy intern project requirements</a>.</p>
+<p id="mentor">Outreachy intern projects will need to meet <a href="/mentor/mentor-faq/#define-a-project">additional Outreachy intern project requirements</a>.</p>
 
 <h2>Timeline for {{ current_round.internstarts|date:"F Y" }} to {{ current_round.internends|date:"F Y" }} internship round</h2>
 {% include "home/snippet/mentor-timeline.html" %}
