--- a/outreachyhome/templates/base.html
+++ b/outreachyhome/templates/base.html
@@ -177,8 +177,8 @@
 						<a class="dropdown-item" href="{% url 'project-selection' %}">Current Projects</a>
 						<a class="dropdown-item" href="{% url 'past-rounds' %}">Past Projects</a>
 						<a class="dropdown-item" href="{% url 'community-cfp' %}">Add A Community</a>
-						<a class="dropdown-item" href="{% url 'community-cfp' %}">Submit A Project</a>
-						<a class="dropdown-item" href="{% url 'community-cfp' %}">Co-mentor A Project</a>
+						<a class="dropdown-item" href="{% url 'community-cfp' %}/#mentor">Submit A Project</a>
+						<a class="dropdown-item" href="{% url 'community-cfp' %}/#mentor">Co-mentor A Project</a>
 						<a class="dropdown-item" href="/promote/">Promote Outreachy</a>
 					</div>
 				</li>
