--- a/home/templates/home/community_cfp.html
+++ b/home/templates/home/community_cfp.html
@@ -58,7 +58,7 @@ Call for Outreachy community coordinators and mentors
 {% include "home/snippet/mentor-timeline.html" %}
 
 {% if approved_communities or pending_communities %}
-	<h2>Mentor or Volunteer for a Participating FOSS Community</h2>
+	<h2>Mentor for a Participating FOSS Community</h2>
 
 	{% if current_round.has_project_submission_and_approval_deadline_passed %}
 		<p>The current Outreachy internship round is now closed to new intern project listings.
