--- a/outreachyhome/templates/base.html
+++ b/outreachyhome/templates/base.html
@@ -147,7 +147,7 @@
 				<button type="button" class="btn btn-light btn-sm">My Participation{% if pending_approvals %} <span class="badge badge-warning">{{ pending_approvals }}</span><span class="sr-only">actions needed</span>{% endif %}</button>
 			</a>
 		{% else %}
-			<span class="navbar-text"><a href="{% url 'login' %}?next={{ request.path|urlencode }}">Log In</a></span>
+			<a href="{% url 'login' %}?next={{ request.path|urlencode }}"><button type="button" class="btn btn-light btn-sm">Log In</button></a>
 		{% endif %}
                 <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#sitenavbar" aria-controls="sitenavbar" aria-expanded="false" aria-label="Toggle navigation" >
                     <span class="navbar-toggler-icon"></span>
