Minor spelling fix in menus.

--- a/outreachyhome/templates/base.html
+++ b/outreachyhome/templates/base.html
@@ -164,7 +164,7 @@
 						<a class="dropdown-item" href="{% url 'dashboard' %}">My Application</a>
 						<a class="dropdown-item" href="{% url 'project-selection' %}">Current Projects</a>
 						<a class="dropdown-item" href="{% url 'past-rounds' %}">Past Projects</a>
-						<a class="dropdown-item" href="/opportunities/">Other Opportunties</a>
+						<a class="dropdown-item" href="/opportunities/">Other Opportunities</a>
 					</div>
 				</li>
 				<li class="nav-item dropdown">
@@ -190,7 +190,7 @@
 						<a class="dropdown-item" href="{% url 'alums' %}">Past Interns</a>
 						<a class="dropdown-item" href="{% url 'dashboard' %}">My Internship</a>
 						<a class="dropdown-item" href="https://wiki.gnome.org/Outreachy/TravelAllowance">Travel Stipend</a>
-						<a class="dropdown-item" href="/opportunities/">Opportunties</a>
+						<a class="dropdown-item" href="/opportunities/">Opportunities</a>
 					</div>
 				</li>
 				<li class="nav-item dropdown">
