Add generic intern contract export

--- a/home/templates/home/eligibility.html
+++ b/home/templates/home/eligibility.html
@@ -11,7 +11,7 @@
 &gt; <a href="/apply/project-selection/">Find a Mentor and Internship Project</a></p>
 </p>
 
-<p>All accepted interns must sign an <a href="/documents/5/Outreachy-Program--Internship-Terms-of-Participation-December-2017.pdf">intern agreement</a>. This is a legal document that certifies you are eligible to apply for Outreachy, and that all the eligibility information you supply in your application is truthful. All accepted interns will need to fill out either a W8-BEN or a W-9 tax form. It is fraud if you sign these legal documents after supplying incorrect information.</p>
+<p>All accepted interns must sign an <a href="{% url 'generic-intern-contract-export' %}">intern agreement</a>. This is a legal document that certifies you are eligible to apply for Outreachy, and that all the eligibility information you supply in your application is truthful. All accepted interns will need to fill out either a W8-BEN or a W-9 tax form. It is fraud if you sign these legal documents after supplying incorrect information.</p>
 
 <h2>Outreachy Eligibility Rules</h2>
 <p>Outreachy is open internationally to people who meet the following requirements:<p>
