Add generic mentor contract support.
Fixes #221

--- a/home/templates/home/preview/project_action.html
+++ b/home/templates/home/preview/project_action.html
@@ -29,7 +29,7 @@ You can always edit this information later.
 		<li><a href="/mentor/mentor-faq/">The mentor FAQ</a></li>
 		<li><a href="/mentor/#mentor">Outreachy mentor duties</a>, including the 5 hour a week time commitment.</li>
 		<li><a href="/mentor/mentor-faq/#define-a-project">Tips on what makes a good project</a></li>
-		<li><a href="https://github.com/sagesharp/outreachy-django-wagtail/blob/master/docs/mentor-agreement.md">The Outreachy mentor contract</a>, which you as an individual will be required to sign</li>
+		<li><a href="{% url 'generic-mentor-contract-export' %}">The Outreachy mentor contract</a>, which you as an individual will be required to sign</li>
 	</ul>
 	</p>
 
