Add mentor dashboard.
When a mentor has selected and intern (and signed a form), display
information about the intern. Keep the information more brief if the
internship is ended (since mentors often mentor multiple times).

Show:
 - internship dates
 - feedback dates
 - payment dates
 - links to mentorship tips
 - link to the travel stipend information
 - links to feedback tips
 - links to internship extension information

--- a/home/templates/home/dashboard.html
+++ b/home/templates/home/dashboard.html
@@ -53,6 +53,10 @@ Dashboard
 	{% include "home/snippet/dashboard_intern.html" %}
 {% endif %}
 
+{% if mentor_relationships %}
+	{% include "home/snippet/dashboard_mentor.html" %}
+{% endif %}
+
 {% if groups %}
 	<h1 id="actions">Dashboard</h1>
 {% endif %}
