--- a/home/templates/home/dashboard.html
+++ b/home/templates/home/dashboard.html
@@ -53,6 +53,12 @@ Dashboard
 	{% include "home/snippet/dashboard_intern.html" %}
 {% endif %}
 
+{% with mentored_projects=request.user.comrade.get_all_mentored_projects %}
+	{% if mentored_projects %}
+		{% include "home/snippet/dashboard_mentor_projects.html" %}
+	{% endif %}
+{% endwith %}
+
 {% if mentor_relationships %}
 	{% include "home/snippet/dashboard_mentor.html" %}
 {% endif %}
