--- a/home/templates/home/preview/project_action.html
+++ b/home/templates/home/preview/project_action.html
@@ -11,17 +11,24 @@
 {{ view.kwargs.action|title }} a Project
 </p>
 
-<p>Steps to {{ view.kwargs.action|title|lower }} a Project:
-<ol>
-	<b><li>Project details</li></b>
-	<li>Mentor profile</li>
-	<li>Project skills</li>
-	<li>Project communication channels</li>
-</ol>
-You can always edit this information later.
-</p>
+{% if view.kwargs.action|title == 'Submit' %}
+	<p>Steps to {{ view.kwargs.action|title|lower }} a Project:
+	<ol>
+		<b><li>Project details</li></b>
+		<li>Mentor profile</li>
+		<li>Project skills</li>
+		<li>Project communication channels</li>
+	</ol>
+	You can always edit this information later.
+	</p>
+	<h1>{{ view.kwargs.action|title }} Internship Project Proposal</h1>
+{% elif view.kwargs.action|title == 'Approve' %}
+	<h1>Confirm Project Participation in Outeachy</h1>
+	{% with mentors=project.get_mentor_names %}
+		<p>"{{ project.short_title }}" with mentor{{ mentors|pluralize }} {{ mentors }}.</p>
+	{% endwith %}
+{% endif %}
 
-<h1>{{ view.kwargs.action|title }} Internship Project Proposal</h1>
 
 {% if view.kwargs.action|title == 'Submit' %}
 	<p>Before submitting a project, make sure to read:
@@ -39,15 +46,20 @@ You can always edit this information later.
 
 {% endif %}
 
-{% include "home/snippet/privacy_policy.html" %}
+{% if view.kwargs.action|title == 'Submit' %}
+	{% include "home/snippet/privacy_policy.html" %}
+{% endif %}
 
-<h3>Required Internship Project Details</h3>
+{% if view.kwargs.action|title == 'Submit' %}
+	<h3>Required Internship Project Details</h3>
+{% endif %}
+
 <p><form action="" method="post">
 	{% csrf_token %}
 	{{ form.media }}
 	{% for field in form %}
 		{% if 'deadline' in field.label_tag %}
-			<h3>Project Deadline and Advertisement</h3>
+			<h3 id="project-deadline">Project Deadline and Advertisement</h3>
 			<p>Close now: If you have many strong applicants who have already filled out an application, you may want to close your project to new applicants.
 			<p>Standard deadline: Most Outreachy projects will close applications on {{ project.project_round.round.appsclose }} at 4pm UTC.</p>
 			<p>Extended deadline: If you have too few applicants, you may want to extend your project deadlines to {{ project.project_round.round.appslate }} at 4pm UTC.</p>
