--- a/home/templates/home/community_read_only.html
+++ b/home/templates/home/community_read_only.html
@@ -14,9 +14,23 @@ Past community participation in Outreachy
 {% include "home/snippet/eligibility_prompts.html" %}
 
 <a href="{% url 'community-cfp' %}">Timeline, FAQ, & Participating Communities</a> &gt; {{ community.name }}
-<h1>{{ community.name }} in Outreachy</h1>
+<h1>{{ community.name }}:
+{% if participation_info and participation_info.approval_status != participation_info.REJECTED and participation_info.approval_status != participation_info.WITHDRAWN %}
+Call for Outreachy mentors
+{% else %}
+Past community participation in Outreachy
+{% endif %}
+</h1>
 
-<p>Outreachy provides internships to people from <a href="/apply/eligibility/">groups traditionally underrepresented in tech</a>. This is a page for Outreachy mentors and coordinators of {{ community.name }}. For more information about what Outreachy is and the deadlines for mentors and coordinators, <a href="/communities/cfp">read the Community Call for Participation page</a>.</p>
+<p>Outreachy provides internships to people from <a href="/apply/eligibility/">groups traditionally underrepresented in tech</a>.
+For more information about what Outreachy is and the deadlines for mentors and coordinators, <a href="/communities/cfp">read the Community Call for Participation page</a>.
+</p>
+
+<p>
+If you are an Outreachy applicant, you should look over the <a href="{% url 'project-selection' %}">list of projects</a> and pick a project from that list.
+</p>
+
+<h2>{{ community.name }} coordinator</h2>
 {% with approved_coordinator_list=community.coordinatorapproval_set.approved approved_projects=participation_info.project_set.approved %}
 {% if approved_coordinator_list %}
 	<p>The {{ community.name }} coordinator{{ approved_coordinator_list|length|pluralize:" is,s are" }}
@@ -27,7 +41,7 @@ Past community participation in Outreachy
 	<p>This community currently has no approved coordinator. Coordinators approve mentored projects, and communicate with both mentors and Outreachy organizers. The full list of coordinator duties can be found on <a href="/mentor/">here</a>.
 {% endif %}
 
-{% if coordinator %}
+{% if coordinator and coordinator.approval_status != coordinator.APPROVED %}
 	Your request to coordinate for this community is:
 	<a href="{{ coordinator.get_preview_url }}">
 		<strong>{{ coordinator.get_approval_status_display }}</strong>
@@ -36,9 +50,36 @@ Past community participation in Outreachy
 	</p>
 {% endif %}
 
+{% if coordinator and coordinator.approval_status == coordinator.APPROVED %}
+<hr />
+	<p>Coordinators provide information about the community for the landing page shown to applicants.</p>
+	{% if not participation_info %}
+		<h2>Participate in This Round</h2>
+		<p>You can sign the community up to participate in the current round.</p>
+		<p><a class="btn btn-success" href="{% url 'participation-action' action='submit' community_slug=community.slug %}">Community will participate</a></p>
+		<p>If you don't have sponsorship funds or you can't find mentors for this round, you can indicate your community won't participate.
+		This will help direct mentors to communities that are participating.</p>
+		<p><a class="btn btn-warning" href="{% url 'participation-action' action='withdraw' community_slug=community.slug %}">Community will not participate</a></p>
+	{% elif participation_info.approval_status == participation_info.WITHDRAWN %}
+		<p>Have you changed your mind and decided your community can participate in this round of Outreachy?</p>
+		<p><a class="btn btn-success" href="{{ participation_info.get_submit_url }}">Community will participate</a></p>
+	{% elif participation_info.approval_status == participation_info.REJECTED %}
+		<p>Unfortunately, the Outreachy organizers have determined your community should not participate in this round. Please <a href="/contact/">contact us</a> for more details.</p>
+	{% else %}
+		{% include 'home/snippet/coordinator_action.html' %}
+	{% endif %}
+{% endif %}
+
 <div class="card mb-3">
     <div class="card-header">Community status</div>
     <div class="card-body">
+	    <p class="card-text">
+	    {% if not current_round.has_project_submission_and_approval_deadline_passed %}
+		    Mentors are encouraged to start promoting their project proposals as soon as the Outreachy round opens on {{ current_round.appsopen }}.
+	    {% elif not current_round.has_late_application_deadline_passed %}
+		    Mentors are encouraged to make sure applicants record their contributions and submit a final application before the project application deadline.
+	    {% endif %}
+	    </p>
 	    <table class=table>
 		    {% if not participation_info %}
 			    <tr><td><span class="badge badge-pill badge-warning">Not Participating</span></td><td>The community coordinator{{ approved_coordinator_list|length|pluralize:" has,s have" }} not submitted this community to participate in the {{ current_round.internstarts|date:"F Y" }} to {{ current_round.internends|date:"F Y" }} Outreachy internship round.</td></tr>
@@ -68,13 +109,6 @@ Past community participation in Outreachy
     </div>
 </div>
 
-{% if participation_info.approval_status == participation_info.APPROVED and not participation_info.participating_round.has_late_application_deadline_passed %}
-	<h2>Promoting {{ community.name }} to Outreachy applicants</h2>
-	<p>After the Outreachy round opens on {{ current_round.appsopen }}, you can promote this community to applicants by linking to the community landing page:</p>
-
-	<p><a href="{% url 'community-landing' round_slug=current_round.slug slug=community.slug %}">{{ request.scheme }}://{{ request.get_host }}{% url 'community-landing' round_slug=current_round.slug slug=community.slug %}</a>
-{% endif %}
-
 
 {% if not participation_info %}
 	{% if notification %}
@@ -89,41 +123,71 @@ Past community participation in Outreachy
 	{% if not current_round.has_project_submission_and_approval_deadline_passed %}
 		<h2>Submit an Outreachy Intern Project Proposal</h2>
 
-		<p>{{ community.name }} welcomes experienced community contributors to help out as mentors. Each mentor will need to submit their an intern project proposal. The project proposal will then be reviewed and approved by the FOSS community coordinator{{ approved_coordinator_list|length|pluralize }}. Additional co-mentors for the intern project will be able to sign up for the project after it is submitted for review.</p>
+		<p>{{ community.name }} welcomes experienced community contributors to help out as mentors. Each mentor will need to submit their an intern project proposal. The project proposal will then be reviewed and approved by the FOSS community coordinator{{ approved_coordinator_list|length|pluralize }}. Additional co-mentors for the intern project will be able to sign up for the project after it has been approved by the community coordinator.</p>
 		<p>All proposed intern projects need to be released under licenses that are either an <a href="https://opensource.org/licenses/alphabetical">OSI-approved open source license</a> that is also identified by the FSF as a <a href="https://www.gnu.org/licenses/license-list.html">free software license</a>, OR a <a href="https://creativecommons.org/share-your-work/public-domain/freeworks/">Creative Commons license approved for free cultural works</a>.
 		</p>
 
 		<p>Please read the additional <a href="/mentor/mentor-faq/#define-a-project">Outreachy project requirements</a> before submitting an intern project proposal.</p>
 
+		<p>Please make sure you understand the <a href="mentor/#mentor">mentor requirements</a>, especially the time commitment requirement.</p>
+
 		<p><strong>Outreachy applicants should not submit project proposals through this form.</strong> You need to look over the <a href="{% url 'project-selection' %}">list of projects</a> and pick a project from that list.</p>
 
 		<p><a class='btn btn-success' href="{% url 'project-action' action='submit' community_slug=community.slug %}">Submit a Project Proposal</a></p>
 	{% else %}
-		<h2>Submitted Outreachy Intern Project Proposals</h2>
+		<h2>Project Submission Deadline Passed</h2>
 		<p>Unfortunately, the deadline to submit new Outreachy internship projects has closed.
 		Mentors who missed the deadline are welcome to sign up for the
 		<a href="https://lists.outreachy.org/cgi-bin/mailman/listinfo/announce">Outreachy announcement list</a>
 		to receive a notification for next round.</p>
 	{% endif %}
 
+	{% if mentors_pending_projects %}
+		<h2>Your Pending Project{{ mentors_pending_projects|pluralize }}</h2>
+		<ul>
+		{% for project in mentors_pending_projects %}
+			<li>
+				<a href="{{ project.get_landing_url }}">{{ project.short_title }}</a>
+			</li>
+		{% endfor %}
+		</ul>
+	{% endif %}
+
 	{% if approved_projects %}
-		<h2>Approved Intern Project Proposals</h2>
-		<p>These intern project proposals have been approved to be listed on the community landing page. Co-mentors can sign up on the linked pages.
-		{% if not current_round.has_project_submission_and_approval_deadline_passed %}
-			Mentors are encouraged to start promoting their project proposals as soon as the Outreachy round opens on {{ current_round.appsopen }}.</p>
-		{% elif not current_round.has_late_application_deadline_passed %}
-			Mentors are encouraged to make sure applicants record their contributions and submit a final application before the project application deadline.</p>
+		<h2>Approved Projects for {{ community.name}}</h2>
+		{% if participation_info.approval_status == participation_info.APPROVED and participation_info.participating_round.has_application_period_started %}
+			<p>After the Outreachy round opens on {{ current_round.appsopen }}, you can promote this community to applicants by linking to the community landing page:</p>
+		{% elif participation_info.approval_status == participation_info.PENDING %}
+			<p>This community has not yet been approved to participate in this Outreachy internship round. The projects will be hidden from applicants.
+			You can review the community and its projects as they will be displayed to applicants once your community has been approved.</p>
+			<p>You will be able to see project descriptions on the page linked below if you are logged in and you're an approved Outreachy coordinator or a mentor.</p>
+		{% else %}
+			<p>You will be able to see project descriptions on the page linked below if you are logged in and you're an approved Outreachy coordinator or a mentor:</p>
 		{% endif %}
+
+		<p><a href="{% url 'community-landing' round_slug=current_round.slug slug=community.slug %}">{{ request.scheme }}://{{ request.get_host }}{% url 'community-landing' round_slug=current_round.slug slug=community.slug %}</a>
 		<ul>
 		{% for project in approved_projects %}
 			<li>
 				{% if project.deadline == project.CLOSED %}(Closed to new applicants. Deadline is {{ current_round.appsclose }}){% endif %}
 				{% if project.deadline == project.LATE %}(Extended deadline to {{ current_round.appslate }}){% endif %}
 				{% if project.deadline == project.ONTIME %}(Application deadline is {{ current_round.appsclose }}){% endif %}
-				<a href="{{ project.get_preview_url }}">{{ project.short_title }}</a>
+				<a href="{{ project.get_landing_url }}">{{ project.short_title }}</a>
 			</li>
 		{% endfor %}
 		</ul>
+	{% endif %}
+
+
+	{% if approved_projects %}
+		<h2>Co-mentor an Intern</h2>
+		<p>You can sign up to co-mentor an Outreachy intern.
+		Co-mentors should understand the <a href="mentor/#mentor">mentor requirements</a>, especially the time commitment requirement.
+		</p>
+		<p>Only projects have been approved by the community coordinator for participation in this Outreachy round are open to co-mentor sign-up.
+		</p>
+		<p>Please select which approved project you would like to co-mentor for:
+		</p>
 	{% endif %}
 
 	{% if coordinator and coordinator.approval_status == coordinator.APPROVED and not current_round.has_project_submission_and_approval_deadline_passed %}
@@ -267,34 +331,6 @@ Past community participation in Outreachy
 		{% if participation_info.approval_status != participation_info.REJECTED %}
 			<a href="{{ participation_info.get_reject_url }}" class="btn btn-warning">Reject Community</a>
 		{% endif %}
-	{% endif %}
-{% endif %}
-
-{% if coordinator and coordinator.approval_status == coordinator.APPROVED %}
-<hr />
-	<h2>Coordinator Actions</h2>
-	<p>Coordinators provide information about the community for the landing page shown to applicants.</p>
-	<p><a class="btn btn-primary" href="{% url 'community-update' community_slug=community.slug %}">Update Community Info</a></p>
-	{% if not participation_info %}
-		<p>You can sign the community up to participate in the current round.</p>
-		<p><a class="btn btn-success" href="{% url 'participation-action' action='submit' community_slug=community.slug %}">Community will participate</a></p>
-		<p>If you don't have sponsorship funds or you can't find mentors for this round, you can indicate your community won't participate.
-		This will help direct mentors to communities that are participating.</p>
-		<p><a class="btn btn-warning" href="{% url 'participation-action' action='withdraw' community_slug=community.slug %}">Community will not participate</a></p>
-	{% elif participation_info.approval_status == participation_info.WITHDRAWN %}
-		<p>Have you changed your mind and decided your community can participate in this round of Outreachy?</p>
-		<p><a class="btn btn-success" href="{{ participation_info.get_submit_url }}">Community will participate</a></p>
-	{% elif participation_info.approval_status == participation_info.REJECTED %}
-		<p>Unfortunately, the Outreachy organizers have determined your community should not participate in this round. Please <a href="/contact/">contact us</a> for more details.</p>
-	{% else %}
-		<p>Do you need to update information about your community's participation in this round (such as number of interns funded or call for volunteers text)?</p>
-		<p><a class="btn btn-primary" href="{{ participation_info.get_submit_url }}">Update Round Info</a></p>
-		<div class="card">
-			<div class="card-header">Preview - Community Information for Applicants</div>
-			<div class="card-body">
-			{% include "home/snippet/community_landing_snippet.html" %}
-			</div>
-		</div>
 	{% endif %}
 {% endif %}
 
