--- a/home/templates/home/community_read_only.html
+++ b/home/templates/home/community_read_only.html
@@ -82,7 +82,14 @@ If you are an Outreachy applicant, you should look over the <a href="{% url 'pro
 	    </p>
 	    <table class=table>
 		    {% if not participation_info %}
-			    <tr><td><span class="badge badge-pill badge-warning">Not Participating</span></td><td>The community coordinator{{ approved_coordinator_list|length|pluralize:" has,s have" }} not submitted this community to participate in the {{ current_round.internstarts|date:"F Y" }} to {{ current_round.internends|date:"F Y" }} Outreachy internship round.</td></tr>
+			    <tr>
+				    <td><span class="badge badge-pill badge-warning">Not Participating</span></td>
+				    <td>The community coordinator{{ approved_coordinator_list|length|pluralize:" has,s have" }} not submitted this community
+					    to participate in the {{ current_round.internstarts|date:"F Y" }} to {{ current_round.internends|date:"F Y" }} Outreachy internship round.
+					    {% if not request.user.comrade %}If you are the coordinator, you can <a href="{% url 'login' %}?next={{ request.path|urlencode }}">log in</a>
+					    to indicate your community will participate.{% endif %}
+				    </td>
+			    </tr>
 		    {% elif participation_info.approval_status == participation_info.PENDING %}
 			    <tr><td><span class="badge badge-pill badge-info">Pending Participation</span></td><td>Outreachy organizers have not approved this community to participate in the {{ current_round.internstarts|date:"F Y" }} to {{ current_round.internends|date:"F Y" }} internship round</td></tr>
 		    {% elif participation_info.approval_status == participation_info.REJECTED %}
