Show advertising in community participation email and fix advertising form checkbox

--- a/home/templates/home/newcommunity_form.html
+++ b/home/templates/home/newcommunity_form.html
@@ -39,7 +39,7 @@ Mentors will be granted read access to applications for their project and will b
 		{% endif %}
 		<div class="form-group card">
 			{{ field.errors }}
-			{% if 'Approved license' in field.label_tag or 'No proprietary software' in field.label_tag or 'Approved Advertising' in field.label_tag %}
+			{% if 'Approved license' in field.label_tag or 'No proprietary software' in field.label_tag or 'Approved advertising' in field.label_tag %}
 				<div class="card-header">
 					{{ field.label_tag }}
 				</div>
