--- a/home/templates/home/snippet/unapproved_advertising.html
+++ b/home/templates/home/snippet/unapproved_advertising.html
@@ -1,4 +1,4 @@
-Warning: This community advertises the services of only one company.
+WARNING: This community advertises the services of only one company.
 
 The Outreachy parent organization, Software Freedom Conservancy, requires that all Outreachy internships further the goals of non-commericial free and open source software. Companies can advertise multiple company's services, and they can acknowledge sponsoring companies generally. However, they cannot advertise only one company.
 
