Clarify password-reset email.
If someone creates multiple accounts with the same email address, Django
will send a password reset email to all of them. However we didn't
indicate which username the reset link was for, so there were several
different failure modes where a user could easily get confused.

One common outcome has been that people would just create a new account
when they couldn't figure out their old username, which of course makes
the problem worse if they need to reset their new account's password
later...

This is a step toward #206.

--- a/outreachyhome/templates/registration/password_reset_email.html
+++ b/outreachyhome/templates/registration/password_reset_email.html
@@ -1,5 +1,10 @@
 {# https://docs.djangoproject.com/en/1.11/topics/auth/default/#django.contrib.auth.views.PasswordResetView #}
-{% filter wordwrap:72 %}Someone asked for a password reset for {{ email }}. If you want to reset your password at {{ domain }}, please follow this link:{% endfilter %}
+{% filter wordwrap:72 %}Someone asked for a password reset on {{ domain }}.{% endfilter %}
+
+- Username: {{ user.username }}
+- Email: {{ email }}
+
+{% filter wordwrap:72 %}If you want to reset your password, please follow this link:{% endfilter %}
 
 {{ protocol }}://{{ domain }}{% url 'password_reset_confirm' uidb64=uid token=token %}
 
